# Object_Detection-YoloV7-

./: README.md  object_detection_gui.py  pyproject.toml
