[tool.poetry]
name = "obj-det"
version = "0.1.0"
description = ""
authors = ["Nagalakshmi136 <naga708523@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.6.0"
pillow = "^11.2.1"
opencv-python = "^4.11.0.86"
pandas = "^2.2.3"
requests = "^2.32.3"
torchvision = "^0.21.0"
tqdm = "^4.67.1"
pyyaml = "^6.0.2"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
scipy = "^1.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
